<resources>
    <string name="app_name">Movie Directory</string>
    <string name="txt_appjudul">Movies APP</string>
    <string name="about">ABOUT</string>
    <string name="btn_directory">Directory</string>
    <string name="btn_about">About</string>
    <string name="nama">Name : Kanikayudha Tantyo Nugroho</string>
    <string name="nim">NIM : 19.11.3013</string>
    <string name="txt_rilis">Release</string>
</resources>