<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/teal_700"
    tools:context=".About">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="229dp"
        android:gravity="center"
        android:text="@string/about"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:gravity="center"
        android:text="@string/nama"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/nim"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>