<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/cardview_dark_background"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/white"
                android:id="@+id/appjudul"
                android:text="@string/txt_appjudul"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="35sp"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="40dp">

            <Button
                android:id="@+id/btndirectory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/btn_directory" />

            <Button
                android:id="@+id/btnabout"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_about" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>